[Gold V] Title: 배, Time: 148 ms, Memory: 15132 KB -BaekjoonHub